--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,10 @@
             android:theme="@style/AppTheme">
 
         <!--
-             The API key for Google Maps-based APIs is defined as a string resource.
+             The API key for Google Maps-based APIs is defined as activity_main string resource.
              (See the file "res/values/google_maps_api.xml").
              Note that the API key is linked to the encryption key used to sign the APK.
-             You need a different API key for each encryption key, including the release key that is used to
+             You need activity_main different API key for each encryption key, including the release key that is used to
              sign the APK for publishing.
              You can define the keys for the debug and release targets in src/debug/ and src/release/.
         -->
@@ -29,7 +29,7 @@
                 android:value="@string/google_maps_key"/>
 
         <activity
-                android:name=".ui.activities.MapsActivity"
+                android:name=".ui.activities.branch.MainActivity"
                 android:label="@string/title_activity_maps">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
