--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,8 @@ dependencies {
 
     //bottomsheet
     implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support:gridlayout-v7:28.0.0'
+
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.0.0'
 }
