--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
                 android:value="@string/google_maps_key"/>
 
         <activity
-                android:name=".ui.activities.MainActivity"
+                android:name=".ui.activities.SplashActivity"
                 android:label="@string/title_activity_maps">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -29,8 +29,10 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".ui.activities.MainActivity"/>
         <activity android:name=".ui.activities.BranchDetailsActivity"/>
         <activity android:name=".ui.activities.ATMDetailsActivity"/>
+        <activity android:name=".ui.activities.Currency"/>
     </application>
 
 </manifest>
