--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
                 android:value="@string/google_maps_key"/>
 
         <activity
-                android:name=".ui.activities.Sample"
+                android:name=".ui.activities.SplashActivity"
                 android:label="@string/title_activity_maps">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
