fetch nearest currency exchange details data from API

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
         <activity android:name=".ui.activities.ATMDetailsActivity"/>
         <activity android:name=".ui.activities.ServiceDetailActivity"/>
         <activity android:name=".ui.activities.SearchActivity"/>
+        <activity android:name=".ui.activities.NearestExchangeActivity"/>
     </application>
 
 </manifest>
