--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
           package="com.example.bank_map_view">
 
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -35,6 +35,7 @@
         <activity android:name=".ui.activities.ServiceDetailActivity"/>
         <activity android:name=".ui.activities.SearchActivity"/>
         <activity android:name=".ui.activities.NearestExchangeActivity"/>
+        <activity android:name=".ui.activities.AvailableServicesActivity"/>
     </application>
 
 </manifest>
